--- a/index.html
+++ b/index.html
@@ -2,3 +2,15 @@
 layout: home
 # Index page
 ---
+<script>
+  window.embeddedChatbotConfig = {
+  chatbotId: "Yyq6rxTsvCQnNn2atckbB",
+  domain: "www.chatbase.co"
+  }
+  </script>
+  <script
+  src="https://www.chatbase.co/embed.min.js"
+  chatbotId="Yyq6rxTsvCQnNn2atckbB"
+  domain="www.chatbase.co"
+  defer>
+  </script>
